--- a/cis1500-fall2022-finalproject-chadhakala/boragonTrail/src/main/resources/com/example/boragontrail/hello-view.fxml
+++ b/cis1500-fall2022-finalproject-chadhakala/boragonTrail/src/main/resources/com/example/boragontrail/hello-view.fxml
@@ -1,16 +1,111 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.boragontrail.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<BorderPane prefHeight="718.0" prefWidth="1111.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.boragontrail.adventureController">
+   <left>
+      <VBox alignment="CENTER" prefHeight="525.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Enemy Stats">
+               <font>
+                  <Font name="Microsoft YaHei" size="12.0" />
+               </font></Label>
+            <Label fx:id="enemyStat" prefHeight="150.0" prefWidth="85.0" text="Label" />
+            <Label alignment="CENTER" text="Player Stats">
+               <font>
+                  <Font name="Microsoft YaHei" size="12.0" />
+               </font></Label>
+            <Label fx:id="playerStat" prefHeight="150.0" prefWidth="85.0" text="Label" />
+         </children>
+      </VBox>
+   </left>
+   <right>
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </right>
+   <top>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane>
+               <columnConstraints>
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#buttonClicked" text="Search" textAlignment="CENTER" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Source Code Pro" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="attackButton" mnemonicParsing="false" onAction="#buttonClicked" text="Attack" textAlignment="CENTER">
+                     <font>
+                        <Font name="Source Code Pro" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="runButton" mnemonicParsing="false" onAction="#buttonClicked" text="Run" textAlignment="CENTER" GridPane.columnIndex="1">
+                     <font>
+                        <Font name="Source Code Pro" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="sleepButton" mnemonicParsing="false" onAction="#buttonClicked" text="Sleep" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Source Code Pro" size="12.0" />
+                     </font></Button>
+               </children>
+            </GridPane>
+         </children>
+      </HBox>
+   </top>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <GridPane alignment="CENTER">
+               <columnConstraints>
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <Button fx:id="upButton" alignment="CENTER" mnemonicParsing="false" onAction="#buttonClicked" text="Up" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                     <font>
+                        <Font name="Source Code Pro Black" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="leftButton" alignment="CENTER" mnemonicParsing="false" onAction="#buttonClicked" text="Left" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                     <font>
+                        <Font name="Source Code Pro Black" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="rightButton" alignment="CENTER" mnemonicParsing="false" onAction="#buttonClicked" text="Right" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                     <font>
+                        <Font name="Source Code Pro Black" size="12.0" />
+                     </font></Button>
+                  <Button fx:id="downButton" alignment="CENTER" mnemonicParsing="false" onAction="#buttonClicked" text="Down" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                     <font>
+                        <Font name="Source Code Pro Black" size="12.0" />
+                     </font></Button>
+               </children>
+            </GridPane>
+         </children>
+      </HBox>
+   </bottom>
+   <center>
+      <TextArea fx:id="textArea" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <effect>
+            <Blend />
+         </effect></TextArea>
+   </center>
+</BorderPane>
